--- a/start.html
+++ b/start.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My start file is not indexed.</h1>
+    <h1>My start file is not index.html file</h1>
+    <h3>New Destination</h3>
 </body>
 </html>
