--- a/start.html
+++ b/start.html
@@ -9,6 +9,6 @@
 <body>
     <h1>My start file is not index.html file</h1>
     <h3>New Destination</h3>
-    <img src="myphoto" alt="">
+    <img src="myphoto.jpg" alt="">
 </body>
 </html>
